# emaths-python

./: .talismanrc  README.md  pyproject.toml
src/: bending_moment_diagram.py  reactions_pl.py  reactions_pm.py  reactions_udl.py  shear_force_diagram.py  shear_moment_pl.py  shear_moment_pm.py  shear_moment_udl.py  structural.py  viga.py
