[tool.poetry]
name = "emaths-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
planesections = "^1.1.1"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
nbformat = "^5.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
